<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_home"
        android:title="@string/title_home" />
    <item
        android:id="@+id/paymentFragment"
        android:icon="@drawable/ic_payments"
        android:title="@string/title_payments" />
    <item
        android:id="@+id/eventsFragment"
        android:icon="@drawable/ic_events"
        android:title="@string/title_events" />
    <item
        android:id="@+id/infoFragment"
        android:icon="@drawable/ic_info"
        android:title="@string/title_info" />
    <item
        android:id="@+id/settingsFragment"
        android:icon="@drawable/ic_settings"
        android:title="@string/title_settings" />
</menu>
